<resources>
    <string name="app_name">UsiMaps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="take_photo">Take Photo</string>
    <string name="searchbar_hint">From</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="route">Route</string>
    <string name="navigate">Navigate</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="room_name">Room Name</string>
    <string name="floor">Floor</string>
    <string name="type">Type</string>
    <string name="connected_edges">Connected Edges</string>
    <string name="selected_image">Selected Image</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="gps_position">GPS Position</string>
    <string name="waiting_for_coordinates">Waiting for coordinates...</string>
    <string name="update_map">Update Map</string>
    <string name="back_to_form">Back to Form</string>
    <string name="no_history_available">No history available</string>
    <string name="date">12/12/2020</string>
    <string name="start">start</string>
    <string name="door2_sector_d">Door2 Sector D</string>
    <string name="instruction">Instruction</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_location">From location</string>
    <string name="to_location">To location</string>
    <string name="select_a_route_to_navigate">Select a route to navigate</string>
    <string name="close">Close</string>
    <string name="test">TEST</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="voice_input">Voice Input</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
</resources>