<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/date"
                android:textSize="12sp"
                android:textStyle="italic"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/route_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="16dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_route"/>

                <TextView
                    android:id="@+id/start_text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:paddingHorizontal="16dp"
                    android:text="@string/start"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/right_arrow"/>

                <TextView
                    android:id="@+id/goal_text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:paddingHorizontal="16dp"
                    android:text="@string/door2_sector_d"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>

